# promotrackerbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml  python.yml
promotrackerbot/: __main__.py
promotrackerbot/clients/: steam.py
promotrackerbot/clients/telegram/: add.py  callback_query.py  help.py  remove.py  removeall.py  start.py  tracklist.py  unknown.py
promotrackerbot/infra/: redis.py
tests/: Dockerfile.test  docker-compose.test.yml  pytest.ini
tests/integration/: test_redis.py  test_steam.py
tests/integration/infra/: test_redis.py
tests/unit/: test_add.py  test_help.py  test_removeall.py  test_start.py  test_tracklist.py
tests/unit/telegram/: test_add.py  test_help.py  test_start.py  test_tracklist.py  test_unknown.py
