[tool.poetry]
name = "promobot"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
python-telegram-bot = "^12.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
