[tool.poetry]
name = "promotrackerbot"
version = "0.1.0"
description = ""
authors = ["Ingrid Rosselis <ingridrosselis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
aioredis = "^1.3.1"
python-telegram-bot = "^12.8"
pytest-redis = "^2.0.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pydocstyle = "^5.0.2"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
